--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </section>
     <section class="informaçoes" id="pratos">
         <h2>Pratos</h2>
-        <p>Nosso restaurante conta com diversos tipos de pratos incluindo opções para pessoas veganas e intolerantes a lactose,temos também pratos típicos e servimos também comida japonesa.</p>
+        <p>Nosso restaurante conta com diversos tipos de pratos incluindo opções para pessoas veganas e intolerantes a lactose,temos também pratos típicos.</p>
     </section>
     <footer>
         <p>
