--- a/lanches.html
+++ b/lanches.html
@@ -31,8 +31,8 @@
             Hambúrguer Artesanal
         </h2>
         <p><strong>R$:12,00</strong></p>
-        <p>Hambúrguer artesanal composto por : 1 bife artesanal,tomate,alface,cebola,
-        picles e ovo.</p>
+        <p>Hambúrguer artesanal composto por : 1 bife artesanal,tomate,
+        alface,picles e ovo.</p>
     </section>
     <section class="produto" id="lanche03">
         <h2>Pão recheado com salsicha</h2>
