--- a/pratos.html
+++ b/pratos.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <header>
-        <h1>Restaurante</h1>
+        <h1><a href="index.html">Restaurante</a></h1>
     </header>
     <nav>
-        <a href="index.html">Home</a>
+        
         <a href="lanches.html">Lanches</a>
         <a href="pratos.html">Pratos</a>
         <a href="sobremesas.html">Sobremesas</a>
