aproveitamento do espaço

--- a/lanches.html
+++ b/lanches.html
@@ -20,6 +20,21 @@
     <section class="titulo" id="lanchestitulo">
         <h1>LANCHES</h1>
     </section>
+    <section class="test">
+        <div class="div1">
+            <h2>SANDUÍCHES COM FRITAS</h2>
+        <p><strong>R$:10,00</strong></p><br>
+        <p>Sanduíche composto por tomate ,ovo e bife,acompanhado por uma porção de fritas.</p>
+        </div>
+        <div class="div1">
+            <h2>
+                Hambúrguer Artesanal
+            </h2>
+            <p><strong>R$:12,00</strong></p>
+            <p>Hambúrguer artesanal composto por : 1 bife artesanal,tomate,
+            alface,picles e ovo.</p>
+        </div>
+    </section>
     <section class="produto" id="lanche01">
         <h2>SANDUÍCHES COM FRITAS</h2>
         <p><strong>R$:10,00</strong></p><br>
