Atualizaçao na estrutura do site

--- a/pratos.html
+++ b/pratos.html
@@ -10,93 +10,72 @@
 <body>
     <header>
         <h1><a href="index.html">Restaurante</a></h1>
-    </header>
-    <nav>
+        <nav>
         
-        <a href="lanches.html">Lanches</a>
-        <a href="pratos.html">Pratos</a>
-        <a href="sobremesas.html">Sobremesas</a>
-    </nav>
-    <section class="titulo" id="pratostitulo">
-        <h1>PRATOS</h1>
-    </section>
-    <section class="produto" id="prato01">
-        <h2>Pizza</h2>
-        <p>
-            <strong>
-                R$15,00
-            </strong>
-        </p>
-        <p>
-            Pizza sabor frango com catupiry.
-        </p>
-    </section>
-    <section class="produto" id="prato02">
-        <h2>Sushi</h2>
-        <p>
-            <strong>
-                R$:18,00
-            </strong>
-        </p>
-        <p>
-            
-        </p>
-    </section>
-    <section class="produto" id="prato03">
-        <h2>Feijoada</h2>
-        <p>
-            <strong>
-                R$:15,00
-            </strong>
-        </p>
-        <p>
-            Prato tradicional com arroz,couve,feijoada e farofa.
-        </p>
-    </section>
-    <section class="produto" id="prato04">
-        <h2>Costela</h2>
-        <p>
-            <strong>
-                R$:30,00
-            </strong>
-        </p>
-        <p>
-            Costela dourada na manteiga.
-        </p>
-    </section>
-    <section class="produto" id="prato05">
-        <h2>Salada</h2>
-        <p>
-            <strong>
-                R$:10,00
-            </strong>
-        </p>
-        <p>
-            Salada simples com frango desfiado.
-        </p>
-    </section>
-    <section class="produto" id="prato06">
-        <h2>Salada com macarrão</h2>
-        <p>
-            <strong>
-                R$:12,00
-            </strong>
-        </p>
-        <p>
-            Salada com macarrão,tomate,cebola e especiarias.
-        </p>
-    </section>
-    <section class="produto" id="prato07">
-        <h2>Lasanha</h2>
-        <p>
-            <strong>
-                R$:20,00
-            </strong>
-        </p>
-        <p>
-            Lasanha tradicional com abobrinha.
-        </p>
-    </section>
+            <a href="lanches.html">Lanches</a>
+            <a href="pratos.html">Pratos</a>
+            <a href="sobremesas.html">Sobremesas</a>
+        </nav>
+    </header>
+    <main>
+        <section class="title" id="titlePratos">
+            <h1>PRATOS</h1>
+        </section>
+        <section class="vendas">
+            <div class="produto">
+                <div>
+                    <h2>PRODUTO</h2>
+                    <p><strong>R$:00,00</strong></p>
+                    <p>DESCRIÇÃO DO PRODUTO</p>
+                </div>
+                <img src="imagens/prato01.jpg">
+            </div>
+            <div class="produto">
+                <div>
+                    <h2>PRODUTO</h2>
+                    <p><strong>R$:00,00</strong></p>
+                    <p>DESCRIÇÃO DO PRODUTO</p>
+                </div>
+                <img src="imagens/prato02.jpg">
+            </div>
+        </section>
+        <section class="vendas">
+            <div class="produto">
+                <div>
+                    <h2>PRODUTO</h2>
+                    <p><strong>R$:00,00</strong></p>
+                    <p>DESCRIÇÃO DO PRODUTO</p>
+                </div>
+                <img src="imagens/prato03.jpg" >
+            </div>
+            <div class="produto">
+                <div>
+                    <h2>PRODUTO</h2>
+                    <p><strong>R$:00,00</strong></p>
+                    <p>DESCRIÇÃO DO PRODUTO</p>
+                </div>
+                <img src="imagens/prato04.jpg">
+            </div>
+        </section>
+        <section class="vendas">
+            <div class="produto">
+                <div>
+                    <h2>PRODUTO</h2>
+                    <p><strong>R$:00,00</strong></p>
+                    <p>DESCRIÇÃO DO PRODUTO</p>
+                </div>
+                <img src="imagens/prato05.jpg">
+            </div>
+            <div class="produto">
+                <div>
+                    <h2>PRODUTO</h2>
+                    <p><strong>R$:00,00</strong></p>
+                    <p>DESCRIÇÃO DO PRODUTO</p>
+                </div>
+                <img src="imagens/prato06.jpg">
+            </div>
+        </section>
+    </main>
     <footer>
         <p>
             Aberto de  Seg. à Sab das 07:00h às 18:00h <br>
