--- a/sobremesas.html
+++ b/sobremesas.html
@@ -10,51 +10,71 @@
 <body>
     <header>
         <h1><a href="index.html">Restaurante</a></h1>
-       
+        <nav>
+            <a href="lanches.html">Lanches</a>
+            <a href="pratos.html">Pratos</a>
+            <a href="sobremesas.html">Sobremesas</a>
+        </nav>
     </header>
-    <nav>
-        <a href="lanches.html">Lanches</a>
-        <a href="pratos.html">Pratos</a>
-        <a href="sobremesas.html">Sobremesas</a>
-    </nav>
-    <section class="titulo" id="docetitulo">
-        <h1>Sobremesas</h1>
-    </section>
-    <section class="produto" id="doce01">
-        <h2>Torta com suspiro</h2>
-        <p><strong>R$:10,00</strong></p>
-        <p>Torta sabor limão com suspiro.</p>
-    </section>
-    <section class="produto" id="doce02">
-        <h2>Sorvete</h2>
-        <p><strong>R$:8,00</strong></p>
-        <p>Sorvete sabor creme com cobertura de morango.</p>
-    </section>
-    <section class="produto" id="doce03">
-        <h2>Torta de frutas</h2>
-        <p><strong>R$:14,00</strong></p>
-        <p>Torta sabor leite condensado com cobertura de frutas vermelhas.</p>
-    </section>
-    <section class="produto" id="doce04">
-        <h2>Suspiro</h2>
-        <p><strong>R$:2,00</strong></p>
-        <p>suspiro sabor limão.</p>
-    </section>
-    <section class="produto" id="doce05">
-        <h2>Palha italiana </h2>
-        <p><strong>R$:4,00</strong></p>
-        <p>palha italiana tradicional com amendoim.</p>
-    </section>
-    <section class="produto" id="doce06">
-        <h2>bolo de chocolate</h2>
-        <p><strong>R$:20,00</strong></p>
-        <p>Bolo de chocolate com cobertura de frutas vermelhas e trufas de chocolate.</p>
-    </section>
-    <section class="produto" id="doce07">
-        <h2>Panquecas</h2>
-        <p><strong>R$:5,00</strong></p>
-        <p>Panquecas tradicionais com cobertura de chocolate.<p>
-    </section>
+    <main>
+        <section class="title" id="titleSobremesa">
+            <h1>SOBREMESAS</h1>
+        </section>
+        <section class="vendas">
+            <div class="produto">
+                <div>
+                    <h2>PRODUTO</h2>
+                    <p><strong>R$:00,00</strong></p>
+                    <p>DESCRIÇÃO DO PRODUTO</p>
+                </div>
+                <img src="imagens/doce01.jpg">
+            </div>
+            <div class="produto">
+                <div>
+                    <h2>PRODUTO</h2>
+                    <p><strong>R$:00,00</strong></p>
+                    <p>DESCRIÇÃO DO PRODUTO</p>
+                </div>
+                <img src="imagens/doce02.jpg">
+            </div>
+        </section>
+        <section class="vendas">
+            <div class="produto">
+                <div>
+                    <h2>PRODUTO</h2>
+                    <p><strong>R$:00,00</strong></p>
+                    <p>DESCRIÇÃO DO PRODUTO</p>
+                </div>
+                <img src="imagens/doce03.jpg" >
+            </div>
+            <div class="produto">
+                <div>
+                    <h2>PRODUTO</h2>
+                    <p><strong>R$:00,00</strong></p>
+                    <p>DESCRIÇÃO DO PRODUTO</p>
+                </div>
+                <img src="imagens/doce04.jpg">
+            </div>
+        </section>
+        <section class="vendas">
+            <div class="produto">
+                <div>
+                    <h2>PRODUTO</h2>
+                    <p><strong>R$:00,00</strong></p>
+                    <p>DESCRIÇÃO DO PRODUTO</p>
+                </div>
+                <img src="imagens/doce05.jpg">
+            </div>
+            <div class="produto">
+                <div>
+                    <h2>PRODUTO</h2>
+                    <p><strong>R$:00,00</strong></p>
+                    <p>DESCRIÇÃO DO PRODUTO</p>
+                </div>
+                <img src="imagens/doce06.jpg">
+            </div>
+        </section>
+    </main>
     <footer>
         <p>
             Aberto de  Seg. à Sab das 07:00h às 18:00h <br>
