--- a/index.html
+++ b/index.html
@@ -17,24 +17,28 @@
         </nav>
     </header>
     
-    <section class="apresentaçao"></section>
-    <section class="informaçoes" id="espaço">
-        <h2>Espaço</h2>
-        <p>Nosso Espaço conta com uma area de 50 metros quadrados.</p>
-    </section>
-    <section class="informaçoes" id="profissionais">
-        <h2>Profissionais</h2>
-        <p>Nosso Restaurante conta com 15 profissionais incluindo:cozinheiros profissionais e formadas,garçons qualificado e recepcionistas experientes.</p>
-    </section>
-    <section class="informaçoes" id="pratos">
-        <h2>Pratos</h2>
-        <p>Nosso restaurante conta com diversos tipos de pratos incluindo opções para pessoas veganas e intolerantes a lactose,temos também pratos típicos.</p>
-    </section>
+    <main>
+        <article class="apresentaçao"></article>
+        <article class="informaçoes" id="espaço">
+            <h2>Espaço</h2>
+            <p>Nosso Espaço conta com uma area de 50 metros quadrados.</p>
+        </article>
+        <article class="informaçoes" id="profissionais">
+            <h2>Profissionais</h2>
+            <p>Nosso Restaurante conta com 15 profissionais incluindo:cozinheiros profissionais e formadas,garçons qualificado e recepcionistas experientes.</p>
+        </article>
+        <article class="informaçoes" id="pratos">
+            <h2>Pratos</h2>
+            <p>Nosso restaurante conta com diversos tipos de pratos incluindo opções para pessoas veganas e intolerantes a lactose,temos também pratos típicos.</p>
+        </article>
+    </main>
     <footer>
-        <p>
-            Aberto de  Seg. à Sab das 07:00h às 18:00h <br>
-            Rua Largo da Matriz , 50 <br> Lima Duarte - MG
-        </p>
+        <adress>
+            <p>
+                Aberto de  Seg. à Sab das 07:00h às 18:00h <br>
+                Rua Largo da Matriz , 50 <br> Lima Duarte - MG
+            </p>
+        </adress>
         <ul>
             <li><a href="#">Contato</a></li>
             <li><a href="#">Sobre nos</a></li>
